<resources>
    <string name="ff_medium">sans-serif-medium</string>
    <string name="ff_regular">sans-serif</string>

    <string name="app_name">Александр Селезнев</string>
    <string name="phone_number_image">phone number image</string>
    <string name="phone_number_hint">Мобильный телефон</string>
    <string name="mail_hint">Адресс электронной почты</string>
    <string name="vk_hint">"Профиль VK"</string>
    <string name="repository_hint">Репозитории</string>
    <string name="abooutme_hint">О себе</string>
    <string name="about_me">Родился 08.12.1984  в г. обнинске Калужской области. В 1991 году переехал в г. Москву.
                            До 1998 года учился в общеобразовательной шклое №1010. В 1998 в связи с переездом перешел в школу №818.
                            В 1999 году поступил в колледж полиции №1, который закончил в 2003 году с профессией "Юрист правовед".
                            С 2003 по 2016 года работал в полиции на различных должностях.</string>
    <string name="number_5">5</string>
    <string name="projects">Проектов</string>
    <string name="reit">Рейтинг</string>
    <string name="codding_string">Написано строчек кода</string>
    <string name="my_phone_number">89169161616</string>
    <string name="user_profile.placeholder.image">Изменить фотографию профиля</string>
    <string name="user_profile_dialog.gallery">Загрузить фото из галереи</string>
    <string name="user_profile_dialog.camera">Сделать снимок</string>
    <string name="user_profile_dialog.cancel">Отмена</string>
    <string name="user_profile_dialog.title">Изменить фотографию профиля</string>
    <string name="user_profile_chooser_message">Выберите фото</string>
</resources>
