<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.MainActivity">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_very_small_8"
    android:layout_marginBottom="@dimen/size_very_small_8">

    <ImageView
        style="@style/icon.left"
        android:contentDescription="@string/phone_number_image"
        android:src="@drawable/ic_local_phone_black_24dp"/>

    <LinearLayout
        style="@style/central_ll"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number_hint"
                android:inputType="phone"
                android:text="89169161616"
                android:enabled="false"
                android:focusable="false"
                android:textColorHint="@color/grey_light"
                android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <ImageView
        style="@style/icon.right"
        android:src="@drawable/ic_phone_in_talk_black_24dp"/>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size_2"
        android:background="@color/grey"
        android:layout_marginLeft="72dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_very_small_8"
        android:layout_marginBottom="@dimen/size_very_small_8">

        <ImageView
            style="@style/icon.left"
            android:contentDescription="@string/phone_number_image"
            android:src="@drawable/ic_email_black_24dp"/>

        <LinearLayout
            style="@style/central_ll"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail_hint"
                    android:inputType="textEmailAddress"
                    android:text="myMail@mymail.ru"
                    android:enabled="false"
                    android:focusable="false"
                    android:textColorHint="@color/grey_light"
                    android:textColor="@color/black"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <ImageView
            style="@style/icon.right"
            android:src="@drawable/ic_send_black_24dp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_size_2"
        android:background="@color/grey"
        android:layout_marginLeft="72dp"/>



</LinearLayout>
