<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <android.support.v4.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_very_small_8"
                android:layout_marginTop="@dimen/size_very_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:contentDescription="@string/phone_number_image"
                    android:src="@drawable/github_circle"/>
<ListView
    android:id="@+id/repositories_list"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginLeft="@dimen/size_medium_32"/>

                <ImageView
                    style="@style/icon.right"
                    android:src="@drawable/ic_visibility_black_24dp"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size_1"
                android:layout_marginLeft="@dimen/size_big_72"
                android:background="@color/grey"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/size_very_small_8"
                android:layout_marginTop="@dimen/size_very_small_8">

                <ImageView
                    style="@style/icon.left"
                    android:contentDescription="@string/phone_number_image"
                    android:src="@drawable/ic_account_circle_black_24dp"/>

                <LinearLayout
                    style="@style/central_ll"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/user_bio_et"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="false"
                            android:focusable="false"
                            android:hint="@string/abooutme_hint"
                            android:inputType="textMultiLine"
                            android:text="@string/about_me"
                            android:textColor="@color/black"
                            android:textColorHint="@color/grey_light"/>
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line_size_1"
                android:layout_marginLeft="@dimen/size_big_72"
                android:background="@color/grey"/>


        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>