<?xml version="1.0" encoding="utf-8"?>


<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentScrim="@color/color_primary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            >


            <ImageView
                android:id="@+id/user_photo_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/profile_image_size_256"
                android:scaleType="centerCrop"
                android:src="@drawable/user_bg"/>


            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_marginTop="@dimen/size_small_24"
                android:theme="@style/AppTheme.PopupOverlay"
                app:layout_collapseMode="pin"
                app:theme="@style/ToolBarStyle"
                />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout
        android:id="@+id/user_info_wrapper"
        android:layout_width="match_parent"
        android:layout_height="@dimen/user_info_wrapper_size_112"
        android:background="@color/grey"
        android:baselineAligned="false"
        android:orientation="horizontal"
        >

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/reat_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/number_5"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/reat_tv"
                android:gravity="center"
                android:text="@string/reit"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_gravity="center"
            android:background="@color/grey_light"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/coding_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/number_5"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/coding_tv"
                android:gravity="center"
                android:text="@string/codding_string"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="1dp"
            android:layout_height="@dimen/size_big_72"
            android:layout_gravity="center"
            android:background="@color/grey_light"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.25">

            <TextView
                android:id="@+id/project_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/number_5"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/project_tv"
                android:gravity="center"
                android:text="@string/projects"
                android:textColor="@android:color/white"
                />
        </RelativeLayout>
    </LinearLayout>


    <include layout="@layout/static_profile_content"/>
    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>






