<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="2dp"
    android:layout_marginTop="@dimen/size_very_small_8"
    app:cardBackgroundColor="@color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.example.alex.skillintensive.ui.views.AspectRatioImageView
                android:id="@+id/user_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/user_photo"
                android:scaleType="centerCrop"
                app:aspect_ratio="1.78"/>
            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/user_full_name_txt"
                android:text="Фамилия Имя "
                android:textColor="@color/white"
                android:fontFamily="@string/ff_medium"
                android:textSize="24sp"
                android:paddingRight="@dimen/size_small_16"
                android:paddingLeft="@dimen/size_small_16"
                android:paddingBottom="@dimen/size_small_24"
                android:layout_gravity="bottom"/>
            
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/user_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Рейтинг"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.5">
                <TextView
                    android:id="@+id/code_line"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Написано строк кода"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:layout_weight="0.25">
                <TextView
                    android:id="@+id/user_projects"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0"
                    android:fontFamily="@string/ff_medium"
                    android:textSize="20sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Проектов"
                    android:fontFamily="@string/ff_regular"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>

            </LinearLayout>


        </LinearLayout>
        <TextView
        android:id="@+id/bio_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/grey_light"
        android:text="@string/about_me"
            android:maxLines="3"
            android:paddingRight="@dimen/size_small_16"
            android:paddingLeft="@dimen/size_small_16"
            android:fontFamily="@string/ff_regular"
            android:textSize="14sp"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grey_light"
            android:layout_marginTop="@dimen/size_small_16"
            android:layout_marginBottom="@dimen/size_very_small_8"
            />
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:id="@+id/more_info_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Просмотр"
            android:textColor="@color/color_accent"
            android:paddingLeft="@dimen/size_small_16"
            android:paddingRight="@dimen/size_small_16"/>
    </LinearLayout>



</android.support.v7.widget.CardView>